--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint": "eslint .",
+    "ts": "tsc --noEmit"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
@@ -39,14 +41,14 @@
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-prettier": "5.2.3",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.37.3",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-unicorn": "45.0.2",
     "prettier": "3.4.2",
-    "typescript": "5.7.2",
+    "typescript": "5.2.2",
     "vite": "5.4.11",
     "vitest": "2.1.8"
   },
