--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "7.54.2",
     "react-hook-form-mui": "7.4.1",
+    "react-number-format": "5.4.3",
     "react-router-dom": "6.23.0",
     "vite-plugin-svgr": "4.3.0",
     "yup": "1.6.1"
