in dev env commented api url

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-VITE_API_URL=https://mp-emp-demo.lenta.com/dev/lenta-backend
+# The proxying is used during the development
+#VITE_API_URL=https://mp-emp-demo.lenta.com/dev/lenta-backend
