added proto of the accept grants page

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,1 @@
-# The proxying is used during the development
-#VITE_API_URL=https://mp-emp-demo.lenta.com/dev/lenta-backend
+VITE_API_URL=https://mp-emp-demo.lenta.com/dev/lenta-backend
