--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-VITE_API_URL=https://mp-emp-demo.lenta.com/dev/lenta-backend
+VITE_API_URL=https://mp-emp-demo.lenta.com/lenta-backend
+VITE_PUBLIC_PATH=/auth
