changed api url for production

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://mp-emp-demo.lenta.com/lenta-backend
+VITE_API_URL=https://mp-emp.lenta.com/lenta-backend
 VITE_PUBLIC_PATH=/auth
